# markdown_editor

./: .env.example  .eslintrc.js  .gitignore  README.md  implementation_tasks.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  vitest.config.ts
docs/: USER_MANUAL.md  api_reference.md  feature_spec.md
lambda_functions/: Dockerfile  docker-compose.yml  install.py  lambda_function.py
src/: App.test.tsx  App.tsx  index.css  main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: file_operations.rs  markdown_parser.rs  mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/models/: block.rs  document.rs  mod.rs
src-tauri/src/core/parser/: mod.rs
src-tauri/src/core/services/: mod.rs
src-tauri/src/utils/: config.rs  error.rs
src/cogs/: notifier.py
src/components/editor/: BlockViewer.tsx  CodeMirrorEditor.tsx  Editor.tsx  SyntaxErrorPanel.tsx
src/components/layout/: Layout.tsx  Sidebar.tsx  Toolbar.tsx
src/components/outline/: OutlineView.tsx
src/components/preview/: MarkdownRenderer.tsx  PreviewPane.tsx
src/components/settings/: SettingsPanel.test.tsx  SettingsPanel.tsx
src/components/ui/: PanelResizer.test.tsx  PanelResizer.tsx
src/hooks/: useFileOperations.ts  useMarkdownParser.ts  useSettings.ts  useSyntaxHighlight.ts  useTheme.test.ts  useTheme.ts
src/services/: syntaxHighlight.ts
src/store/: editorStore.ts  uiStore.test.ts  uiStore.ts
src/test/: performance.test.ts  setup.ts
src/types/: api.ts  backend.ts  block.ts  editor.ts  index.ts
src/utils/: webhook.py
