[project]
name = "disco-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord-py>=2.6.4",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pyright>=1.1.408",
    "ruff>=0.14.13",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "ARG", "PTH"]
ignore = []

[tool.pyright]
include = ["src"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
pythonPlatform = "Darwin"
