[package]
name = "md-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "md_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# Markdown解析
pulldown-cmark = { version = "0.11", features = ["simd"] }
pulldown-cmark-to-cmark = "13.0"

# シンタックスハイライト
syntect = { version = "5.1", default-features = false, features = ["default-syntaxes", "default-themes", "html", "regex-onig"] }

# ファイル操作
dirs = "5.0"

# 正規表現
regex = "1.0"

# HTML エスケープ
html-escape = "0.2"

